--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <h1>Ol To Blockquote Converter</h1>
+  <h1>Ol To Blockquote Converter 2.0</h1>
   <label for="">input :</label>
   <textarea name="" id="input" cols="30" rows="10"></textarea>
 
