--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
 
-  <h1>Ol To Blockquote Converter 2.0</h1>
+  <h1>O2B 2.0</h1>
   <label for="">input :</label>
   <textarea name="" id="input" cols="30" rows="10"></textarea>
 
-  <button id="btn">Get Code</button>
+  <button id="btn">Get</button>
 
 
 
@@ -29,7 +29,7 @@
   <textarea name="" id="output" cols="30" rows="10"></textarea>
 
 
-  <button id="copy">Copy Code</button>
+  <button id="copy">Copy</button>
 
   <button id="count">0</button>
 
@@ -40,7 +40,6 @@
 
   <!-- Project -->
   <script src="main.js"></script>
-  <script src="new.js"></script>
 </body>
 
 </html>
